--- a/perfis/templates/index.html
+++ b/perfis/templates/index.html
@@ -23,12 +23,31 @@
 				</div>
 				<ul class="list-group">
 					{% for convite in perfil_logado.convites_recebidos.all %}
-					<li class="list-group-item">{{ convite.solicitante.nome }} <a href="#" class="pull-right">aceitar</a></li>
+					<li class="list-group-item">{{ convite.solicitante.nome }} <a href="{% url 'aceitar' convite.id %}" class="pull-right">aceitar</a></li>
 					{% endfor %}
 				</ul>
 				{% else %}
 				<div class="panel-body">
 					<p>Nenhum convite recebido :(</p>
+				</div>
+				{% endif %}
+			{% endwith %}
+		</div>
+		
+		<div class="panel panel-default">
+			{% with total_de_contatos=perfil_logado.contatos.count %}
+				{% if total_de_contatos %}
+				<div class="panel-heading">
+					<strong>Você tem {{ total_de_contatos }} contato {{ total_de_convites |pluralize}} </strong>
+				</div>
+				<ul class="list-group">
+					{% for contato in perfil_logado.contatos.all %}
+					<li class="list-group-item"><a class="pull-right" href="{% url 'exibir' contato.id %}" class="pull-right">{{ contato.nome }}</a></li>
+					{% endfor %}
+				</ul>
+				{% else %}
+				<div class="panel-body">
+					<p>Você não possui contatos no momento :(</p>
 				</div>
 				{% endif %}
 			{% endwith %}
