--- a/usuarios/templates/registrar.html
+++ b/usuarios/templates/registrar.html
@@ -3,14 +3,19 @@
 	<form class="form-signin" action="{% url 'registrar' %}" method="post">
 		{% csrf_token %}
 		<h2 class="form-signin-heading">Crie o seu usuário</h2>
-		<input type="email" name="email" id="id_email" class="form-control" placeholder="Email *" required>
-		<input type="text" name="nome" id="id_nome" class="form-control" placeholder="Nome" required>
+		<input type="email" name="email" id="id_email" class="form-control" placeholder="Email *" required value="{{form.email.value}}">
+		<input type="text" name="nome" id="id_nome" class="form-control" placeholder="Nome" required value="{{form.nome.value}}">
 		<input type="password" name="senha" id="id_senha" class="form-control" placeholder="Senha" required>
-		<input type="text" name="telefone" id="id_telefone" class="form-control" placeholder="Telefone">
-		<input type="text" name="nome_empresa" id="id_nome_empresa" class="form-control" placeholder="Empresa">
+		<input type="text" name="telefone" id="id_telefone" class="form-control" placeholder="Telefone" value="{{form.telefone.value}}">
+		<input type="text" name="nome_empresa" id="id_nome_empresa" class="form-control" placeholder="Empresa" value="{{form.nome_empresa.value}}">
 
 		<hr/>
-
+		{% if form.erros %}
+			<div class="alert alert-danger">
+				<button type="button" class="close">&times;</button>
+				{{ form.non_field_erros }}
+			</div>
+		{% endif %}
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Registrar</button>
 	</form>
 {% endblock %}
